# studentmangerdemo

./: .gitignore  LICENSE  README.md  StudentManager.py  fake_info.py  pyproject.toml
src/: AddStudent.py  AddUser.py  ChangePass.py  Manager.py  StudentDb.db  UpdateStudent.py  login.py  sql.py
