[tool.poetry]
name = "studentmanager"
version = "0.1.0"
description = "python期末作业"
authors = ["kuttakke <kuttake@outlook.com>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/kuttakke/studentmangerdemo"
keywords = ["tkinter", "pyqt5", "poetry"]

[tool.poetry.dependencies]
python = "^3.9"
pillow = "^8.3.2"
pyqt5 = "^5.15.4"
faker = "^9.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.163.com/pypi/simple/"
default = true
